# Multimedia

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: four_sample_44k.pcm  one_sample_44k.pcm
app/src/main/cpp/: CMakeLists.txt  Mayer_FFT.c  fft_api.cpp  native-lib.cpp  openSLES.c  sound_player.c
app/src/main/cpp/fftw3/: fftw3_jni.c
app/src/main/cpp/wav/: wav.c  wav.h
app/src/main/java/com/example/ffmpeg/: MainActivity.java  PCMPlayer.java  PermisionUtils.java  SoundThread.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
